--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -107,20 +107,20 @@
              <div class="round round-two current">
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Rachel Mcadams</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Alexandra Daddario</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hsdlvn" target="_blank">Rachel Mcadams</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hsdlvn" target="_blank">Alexandra Daddario</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Jennifer Connelly</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Taylor Swift</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hsdlxv" target="_blank">Jennifer Connelly</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hsdlxv" target="_blank">Taylor Swift</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Blake Lively</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Mila Kunis</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hsdm2r" target="_blank">Blake Lively</a></li>
+                    <li class="team team-top"><a href="jhttps://reddit.com/hsdm2r" target="_blank">Mila Kunis</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Ana De Armas</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Hailee Steinfeild</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hsdm48" target="_blank">Ana De Armas</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hsdm48" target="_blank">Hailee Steinfeild</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">Scarlett Johansson</a></li>
@@ -255,12 +255,12 @@
                     <li class="team team-top"><a href="javascript:void(0);">Olivia Wilde</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Amanda Seyfried</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Elizabeth Olsen</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Zoey Deutch</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Brooklyn Decker</a></li>
                  </ul>
              </div>
              <!-- END ROUND TWO -->
@@ -320,19 +320,19 @@
                  <p>Group H</p>
                  <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/hoquxd" target="_blank">Amanda Seyfried</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/hoquxd" target="_blank">Marisa Tomei</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hoquxd" target="_blank">Marisa Tomei</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hoqv0d" target="_blank">Elisha Cuthbert</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hoqv0d" target="_blank">Elisha Cuthbert</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hoqv0d" target="_blank">Elizabeth Olsen</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hoqv2h" target="_blank">Rose Bryne</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hoqv2h" target="_blank">Rose Bryne</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hoqv2h" target="_blank">Zoey Deutch</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hoqv4s" target="_blank">Nathalie Emmanuel</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/hoqv4s" target="_blank">Brookyln Decker</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hoqv4s" target="_blank">Nathalie Emmanuel</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hoqv4s" target="_blank">Brooklyn Decker</a></li>
                  </ul>
              </div>
              <!-- END ROUND ONE -->                          
