--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -107,48 +107,48 @@
              <div class="round round-two current">
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hsdlvn" target="_blank">Rachel Mcadams</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hsdlvn" target="_blank">Rachel Mcadams</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hsdlvn" target="_blank">Alexandra Daddario</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hsdlxv" target="_blank">Jennifer Connelly</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hsdlxv" target="_blank">Jennifer Connelly</a></li>
                     <li class="team team-top"><a href="https://reddit.com/hsdlxv" target="_blank">Taylor Swift</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/hsdm2r" target="_blank">Blake Lively</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hsdm2r" target="_blank">Blake Lively</a></li>
                     <li class="team team-top"><a href="jhttps://reddit.com/hsdm2r" target="_blank">Mila Kunis</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/hsdm48" target="_blank">Ana De Armas</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/hsdm48" target="_blank">Hailee Steinfeild</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hsdm48" target="_blank">Hailee Steinfeild</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Scarlett Johansson</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Barbara Palvin</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hwfnoe" target="_blank">Scarlett Johansson</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hwfnoe" target="_blank">Barbara Palvin</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Emilia Clarke</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Kate Upton</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hwfnpt" target="_blank">Emilia Clarke</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hwfnpt" target="_blank">Kate Upton</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Victoria Justice</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Nina Dobrev</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hwfnqn" target="_blank">Victoria Justice</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hwfnqn" target="_blank">Nina Dobrev</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Natalie Portman</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Jessica Alba</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hwfns8" target="_blank">Natalie Portman</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/hwfns8" target="_blank">Jessica Alba</a></li>
                  </ul>  
              </div>
              <!-- END ROUND TWO -->
              <div class="round round-three current">
                 <div class="round-details">Round 3<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Alexandra Daddario</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Taylor Swift</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Mila Kunis</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Ana De Armas</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
