--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -124,19 +124,19 @@
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/hwfnoe" target="_blank">Scarlett Johansson</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/hwfnoe" target="_blank">Barbara Palvin</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hwfnoe" target="_blank">Barbara Palvin</a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/hwfnpt" target="_blank">Emilia Clarke</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/hwfnpt" target="_blank">Kate Upton</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hwfnpt" target="_blank">Kate Upton</a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/hwfnqn" target="_blank">Victoria Justice</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/hwfnqn" target="_blank">Nina Dobrev</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hwfnqn" target="_blank">Nina Dobrev</a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/hwfns8" target="_blank">Natalie Portman</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/hwfns8" target="_blank">Jessica Alba</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/hwfns8" target="_blank">Jessica Alba</a></li>
                  </ul>  
              </div>
              <!-- END ROUND TWO -->
@@ -151,12 +151,12 @@
                     <li class="team team-top"><a href="javascript:void(0);">Ana De Armas</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Scarlett Johansson</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Emilia Clarke</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Victoria Justice</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Natalie Portman</a></li>
                  </ul>
              </div>
              <!-- END ROUND THREE -->
@@ -231,20 +231,20 @@
              <div class="round round-two current">
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Margot Robbie</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Emma Stone</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i06q2s" target="_blank">Margot Robbie</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i06q2s" target="_blank">Emma Stone</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Brie Larson</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Natalie Dormer</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i06q4k" target="_blank">Brie Larson</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i06q4k" target="_blank">Natalie Dormer</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Yvonne Strahovski</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Hayley Atwell</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i06q6v" target="_blank">Yvonne Strahovski</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i06q6v" target="_blank">Hayley Atwell</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Alice Eve</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Gal Gadot</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i06q8k" target="_blank">Alice Eve</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i06q8k" target="_blank">Gal Gadot</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">Anna Kendrick</a></li>
