--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -211,12 +211,12 @@
              <div class="round round-three current">
                 <div class="round-details">Round 3<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Margot Robbie</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Natalie Dormer</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Yvonne Strahovski</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Gal Gadot</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
@@ -232,35 +232,35 @@
                 <div class="round-details">Round 2<br/></div>
                 <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/i06q2s" target="_blank">Margot Robbie</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/i06q2s" target="_blank">Emma Stone</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/i06q2s" target="_blank">Emma Stone</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/i06q4k" target="_blank">Brie Larson</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/i06q4k" target="_blank">Brie Larson</a></li>
                     <li class="team team-top"><a href="https://reddit.com/i06q4k" target="_blank">Natalie Dormer</a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/i06q6v" target="_blank">Yvonne Strahovski</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/i06q6v" target="_blank">Hayley Atwell</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/i06q6v" target="_blank">Hayley Atwell</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/i06q8k" target="_blank">Alice Eve</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/i06q8k" target="_blank">Alice Eve</a></li>
                     <li class="team team-top"><a href="https://reddit.com/i06q8k" target="_blank">Gal Gadot</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Anna Kendrick</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Gemma Arterton</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i4rdlv" target="_blank">Anna Kendrick</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i4rdlv" target="_blank">Gemma Arterton</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Emma Watson</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Olivia Wilde</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i4rdnf" target="_blank">Emma Watson</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i4rdnf" target="_blank">Olivia Wilde</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Amanda Seyfried</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Elizabeth Olsen</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i4rdpj" target="_blank">Amanda Seyfried</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i4rdpj" target="_blank">Elizabeth Olsen</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Zoey Deutch</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Brooklyn Decker</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i4rdqh" target="_blank">Zoey Deutch</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i4rdqh" target="_blank">Brooklyn Decker</a></li>
                  </ul>
              </div>
              <!-- END ROUND TWO -->
