--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -141,22 +141,22 @@
              </div>
              <!-- END ROUND TWO -->
              <div class="round round-three current">
-                <div class="round-details">Round 3<br/></div>
+                <div class="round-details">Round 3A<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Alexandra Daddario</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Taylor Swift</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i7zch0" target="_blank">Alexandra Daddario</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i7zch0" target="_blank">Taylor Swift</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Mila Kunis</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Ana De Armas</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i7zcim" target="_blank">Mila Kunis</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i7zcim" target="_blank">Ana De Armas</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Scarlett Johansson</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Emilia Clarke</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i7zck6" target="_blank">Scarlett Johansson</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i7zck6" target="_blank">Emilia Clarke</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Victoria Justice</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Natalie Portman</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i7zclc" target="_blank">Victoria Justice</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/i7zclc" target="_blank">Natalie Portman</a></li>
                  </ul>
              </div>
              <!-- END ROUND THREE -->
@@ -209,7 +209,7 @@
                 </ul>
              </div>  
              <div class="round round-three current">
-                <div class="round-details">Round 3<br/></div>
+                <div class="round-details">Round 3B<br/></div>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">Margot Robbie</a></li>
                     <li class="team team-top"><a href="javascript:void(0);">Natalie Dormer</a></li>
@@ -219,12 +219,12 @@
                     <li class="team team-top"><a href="javascript:void(0);">Gal Gadot</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Anna Kendrick</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Emma Watson</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Elizabeth Olsen</a></li>
+                    <li class="team team-top"><a href="javascript:void(0);">Zoey Deutch</a></li>
                  </ul>
              </div>
              <!-- END ROUND THREE -->    
@@ -248,19 +248,19 @@
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/i4rdlv" target="_blank">Anna Kendrick</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/i4rdlv" target="_blank">Gemma Arterton</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/i4rdlv" target="_blank">Gemma Arterton</a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/i4rdnf" target="_blank">Emma Watson</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/i4rdnf" target="_blank">Olivia Wilde</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/i4rdnf" target="_blank">Olivia Wilde</a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/i4rdpj" target="_blank">Amanda Seyfried</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/i4rdpj" target="_blank">Amanda Seyfried</a></li>
                     <li class="team team-top"><a href="https://reddit.com/i4rdpj" target="_blank">Elizabeth Olsen</a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/i4rdqh" target="_blank">Zoey Deutch</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/i4rdqh" target="_blank">Brooklyn Decker</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/i4rdqh" target="_blank">Brooklyn Decker</a></li>
                  </ul>
              </div>
              <!-- END ROUND TWO -->
