--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -16,8 +16,8 @@
             <p class="intro" id="intro">CelebBattles</p>
             <h1 id="headline">Late Night Legs</h1>
             <p class="year"><i class="fa fa-star"></i> 2020 <i class="fa fa-star"></i></p>
-            <img src="download.png" alt="Girl in a jacket" style="width:50px;height:50px;padding-bottom:15px">
-            <img src="Capture.PNG" alt="celebbattles" style="width:100%">
+            <img src="download2.png" alt="Girl in a jacket" style="width:75px;height:75px;padding-bottom:10px">
+            <img src="Capture.PNG" alt="celebbattles" style="height:200px">
        </div>
     </header>
     <section id="bracket">
