--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -17,7 +17,7 @@
             <h1 id="headline">Late Night Legs</h1>
             <p class="year"><i class="fa fa-star"></i> 2020 <i class="fa fa-star"></i></p>
             <img src="download2.png" alt="Girl in a jacket" style="width:75px;height:75px;padding-bottom:10px">
-            <img src="Capture.PNG" alt="celebbattles" style="height:200px">
+            <div id="animatedBackground"></div>
        </div>
     </header>
     <section id="bracket">
