added css for group display

--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -39,7 +39,7 @@
           <div class="split split-one">
              <div class="round round-one current">
                 <div class="round-details">Round 1<br/></div>
-                <p>Group A</p>
+                <p class="group-details">Group A</p>
                 <ul class="matchup">
                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
@@ -56,7 +56,7 @@
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
-                <p>Group B</p>
+                <p class="group-details">Group B</p>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
@@ -73,7 +73,7 @@
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
-                <p>Group C</p>
+                <p class="group-details">Group C</p>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
@@ -90,7 +90,7 @@
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
-                 <p>Group D</p>
+                 <p class="group-details">Group D</p>
                  <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
@@ -271,7 +271,7 @@
              <!-- END ROUND TWO -->
              <div class="round round-one current current">
                 <div class="round-details">Round 1<br/></div>
-                <p>Group E</p>
+                <p class="group-details">Group E</p>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
@@ -288,7 +288,7 @@
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
-                <p>Group F</p>
+                <p class="group-details">Group F</p>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
@@ -305,7 +305,7 @@
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                 </ul>
-                <p>Group G</p>
+                <p class="group-details">Group G</p>
                 <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
@@ -322,7 +322,7 @@
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                  </ul>
-                 <p>Group H</p>
+                 <p class="group-details">Group H</p>
                  <ul class="matchup">
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
