--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -163,12 +163,12 @@
              <div class="round quarterfinals current">
                 <div class="round-details">Quarterfinals<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Taylor Swift</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Ana De Armas</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/idzmuf" target="_blank">Taylor Swift</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/idzmuf" target="_blank">Ana De Armas</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">Emilia Clarke</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">Natalie Portman</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/idzmt5" target="_blank">Emilia Clarke</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/idzmt5" target="_blank">Natalie Portman</a></li>
                 </ul>
              </div>     
           </div>
@@ -200,31 +200,31 @@
             <div class="round quarterfinals current">
                 <div class="round-details">Quarterfinals<br/></div>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/idzmvs" target="_blank">Margot Robbie</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/idzmvs" target="_blank">Gal Gadot</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
-                    <li class="team team-top"><a href="javascript:void(0);">&nbsp;</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/idzmx3" target="_blank">Emma Watson</a></li>
+                    <li class="team team-top"><a href="https://reddit.com/idzmx3" target="_blank">Elizabeth Olsen</a></li>
                 </ul>
              </div>  
              <div class="round round-three current">
                 <div class="round-details">Round 3B<br/></div>
                 <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/iaxcas" target="_blank">Margot Robbie</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/iaxcas" target="_blank">Natalie Dormer</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/iaxcas" target="_blank">Natalie Dormer</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/iaxccj" target="_blank">Yvonne Strahovski</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/iaxccj" target="_blank">Yvonne Strahovski</a></li>
                     <li class="team team-top"><a href="https://reddit.com/iaxccj" target="_blank">Gal Gadot</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/iaxchj" target="_blank">Anna Kendrick</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/iaxchj" target="_blank">Anna Kendrick</a></li>
                     <li class="team team-top"><a href="https://reddit.com/iaxchj" target="_blank">Emma Watson</a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top"><a href="https://reddit.com/iaxcix" target="_blank">Elizabeth Olsen</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/iaxcix" target="_blank">Zoey Deutch</a></li>
+                    <li class="loser team-top"><a href="https://reddit.com/iaxcix" target="_blank">Zoey Deutch</a></li>
                  </ul>
              </div>
              <!-- END ROUND THREE -->    
