--- a/tournaments/bestface.html
+++ b/tournaments/bestface.html
@@ -167,8 +167,8 @@
                     <li class="team team-top"><a href="https://reddit.com/idzmuf" target="_blank">Ana De Armas</a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top"><a href="https://reddit.com/idzmt5" target="_blank">Emilia Clarke</a></li>
-                    <li class="team team-top"><a href="https://reddit.com/idzmt5" target="_blank">Natalie Portman</a></li>
+                    <li class="team team-top"><a href="https://redd.it/ie0581" target="_blank">Emilia Clarke</a></li>
+                    <li class="team team-top"><a href="https://redd.it/ie0581" target="_blank">Natalie Portman</a></li>
                 </ul>
              </div>     
           </div>
